[gd_scene load_steps=2 format=3 uid="uid://1ak1ku3d4xvu"]

[ext_resource type="Script" path="res://scripts/ui/menus/main_menu/menu_button.gd" id="1_py82b"]

[node name="MenuButton" type="Button"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_py82b")

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
